Add pkgs to imports

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -24,14 +24,21 @@ Imports:
     extraChIPs,
     fgsea,
     GenomicRanges,
+    ggpubr,
     ggrepel,
+    ggtext,
+    glue,
+    goseq,
     Gviz,
     here,
     kableExtra,
     limma,
+    magrittr,
     msigdbr,
     ngsReports,
     pander,
+    pheatmap,
+    RColorBrewer,
     scales,
     shiny,
     shinydashboard,
